syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.syshco.grpc.gen";


service  MovieService{
  rpc getMovies(Empty) returns  (MovieResponse);

}

message  Empty {}

message MovieResponse {
  repeated Movie movies =1;
}


message Movie{
  int32 movieId =1;
  string title = 2;
  int32 year = 3;
  double rating = 4;
  string director = 5;
  string description = 6;
}


